@@ -34,7 +34,8 @@ import password.pwm.http.HttpContentType;
 import password.pwm.http.HttpEntityDataType;
 import password.pwm.http.HttpHeader;
 import password.pwm.http.HttpMethod;
-import password.pwm.util.java.ImmutableByteArray;
+import password.pwm.data.ImmutableByteArray;
+import password.pwm.http.PwmURL;
 import password.pwm.svc.stats.Statistic;
 import password.pwm.svc.stats.StatisticsClient;
 import password.pwm.util.java.AtomicLoopIntIncrementer;
@@ -51,7 +52,6 @@ import java.io.InputStream;
 import java.net.InetSocketAddress;
 import java.net.ProxySelector;
 import java.net.URI;
-import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpHeaders;
 import java.net.http.HttpRequest;
@@ -79,6 +79,7 @@ public class JavaPwmHttpClient implements PwmHttpClientProvider
     private HttpClient httpClient;
     private TrustManager[] trustManagers;
     private PwmHttpClientConfiguration pwmHttpClientConfiguration;
+    private SessionLabel sessionLabel;
 
     private final int clientID = CLIENT_COUNTER.next();
 
@@ -89,12 +90,14 @@ public class JavaPwmHttpClient implements PwmHttpClientProvider
     public void init(
             final PwmApplication pwmApplication,
             final HttpClientService httpClientService,
-            final PwmHttpClientConfiguration pwmHttpClientConfiguration
+            final PwmHttpClientConfiguration pwmHttpClientConfiguration,
+            final SessionLabel sessionLabel
     )
             throws PwmUnrecoverableException
     {
         this.pwmApplication = Objects.requireNonNull( pwmApplication );
         this.pwmHttpClientConfiguration = pwmHttpClientConfiguration;
+        this.sessionLabel = sessionLabel;
         this.httpClientService = Objects.requireNonNull( httpClientService );
         final AppConfig appConfig = pwmApplication.getConfig();
         final HttpTrustManagerHelper trustManagerHelper = new HttpTrustManagerHelper( pwmApplication.getConfig(), pwmHttpClientConfiguration );
@@ -141,7 +144,7 @@ public class JavaPwmHttpClient implements PwmHttpClientProvider
     }
 
     @Override
-    public PwmHttpClientResponse makeRequest( final PwmHttpClientRequest clientRequest, final SessionLabel sessionLabel )
+    public PwmHttpClientResponse makeRequest( final PwmHttpClientRequest clientRequest )
             throws PwmUnrecoverableException
     {
         try
@@ -174,7 +177,7 @@ public class JavaPwmHttpClient implements PwmHttpClientProvider
 
             final PwmHttpClientResponse pwmHttpClientResponse = builder.build();
 
-            logResponse( clientRequest, pwmHttpClientResponse, startTime, sessionLabel );
+            logResponse( clientRequest, pwmHttpClientResponse, startTime );
 
             return pwmHttpClientResponse;
 
@@ -188,7 +191,7 @@ public class JavaPwmHttpClient implements PwmHttpClientProvider
 
     private void logRequest( final PwmHttpClientRequest clientRequest, final SessionLabel sessionLabel ) throws PwmUnrecoverableException
     {
-        if ( LOGGER.isEnabled( PwmLogLevel.TRACE ) )
+        if ( LOGGER.isInterestingLevel( PwmLogLevel.TRACE ) )
         {
             final String sslDebugText;
             if ( clientRequest.isHttps() )
@@ -209,15 +212,14 @@ public class JavaPwmHttpClient implements PwmHttpClientProvider
     private void logResponse(
             final PwmHttpClientRequest pwmHttpClientRequest,
             final PwmHttpClientResponse pwmHttpClientResponse,
-            final Instant startTime,
-            final SessionLabel sessionLabel
+            final Instant startTime
     )
     {
         StatisticsClient.incrementStat( pwmApplication, Statistic.HTTP_CLIENT_REQUESTS );
         httpClientService.getStats().increment( HttpClientService.StatsKey.responseBytes, pwmHttpClientResponse.size() );
         httpClientService.getStats().increment( HttpClientService.StatsKey.requestBytes, pwmHttpClientRequest.size() );
         LOGGER.trace( sessionLabel, () -> "client #" + clientID + " received response (id=" + pwmHttpClientRequest.getRequestID() + ") "
-                + pwmHttpClientResponse.toDebugString( pwmApplication, pwmHttpClientConfiguration ), () -> TimeDuration.fromCurrent( startTime ) );
+                + pwmHttpClientResponse.toDebugString( pwmApplication, pwmHttpClientConfiguration ), TimeDuration.fromCurrent( startTime ) );
     }
 
     private static Optional<HttpContentType> contentTypeForResponse( final HttpHeaders httpHeaders )
@@ -304,13 +306,9 @@ public class JavaPwmHttpClient implements PwmHttpClientProvider
     public InputStream streamForUrl( final String inputUrl )
             throws IOException, PwmUnrecoverableException
     {
-        final URL url = new URL( inputUrl );
-        if ( "file".equals( url.getProtocol() ) )
-        {
-            return url.openStream();
-        }
+        final URI uri = URI.create( inputUrl );
 
-        if ( "http".equals( url.getProtocol() ) || "https".equals( url.getProtocol() ) )
+        if ( PwmURL.uriSchemeMatches( uri, PwmURL.Scheme.http, PwmURL.Scheme.https ) )
         {
             try
             {
@@ -320,7 +318,7 @@ public class JavaPwmHttpClient implements PwmHttpClientProvider
                 {
                     final String errorMsg = "error retrieving stream for url '" + inputUrl + "', remote response: " + response.statusCode();
                     final ErrorInformation errorInformation = new ErrorInformation( PwmError.ERROR_HTTP_CLIENT, errorMsg );
-                    LOGGER.error( errorInformation );
+                    LOGGER.error( sessionLabel, errorInformation );
                     throw new PwmUnrecoverableException( errorInformation );
                 }
                 return response.body();
@@ -332,7 +330,7 @@ public class JavaPwmHttpClient implements PwmHttpClientProvider
             }
         }
 
-        throw new IllegalArgumentException( "unknown protocol type: " + url.getProtocol() );
+        throw new IllegalArgumentException( "unknown protocol type: " + uri.getScheme() );
     }
 
     @Override
